# figure-verification

./: .gitignore  POC_SCOPE.md  README.md  VPlot_SEMANTICS.md  pyproject.toml
.agent/: context.sh  m14_eval_design.md  m14c_eval_design.md  m14f_codex_fixes.patch  m14f_cr2_design.md  m14f_oracle_design.md  m15bc_checks_design.md  m16a_render_design.md  m16c_render_design.md  m16d_render_design.md  m3_1_design.md  m3_4_design.md  memory.md  outline.md  roadmap.md
.agents/skills/session-prompt/: SKILL.md
.agents/skills/session-prompt/agents/: openai.yaml
.claude/: settings.json
.codex/prompts/: session.md
.serena/: project.yml
bench/: README.md  __init__.py  __main__.py  harness.py  prompts.py
data/: deliberately_dirty.csv  sales.csv  weather.csv
data/schemas/: deliberately_dirty.json  sales.json  weather.json
demo/: README.md  __init__.py  __main__.py  build_demo.py  e2e.py  index.html  walkthrough.py
examples/: README.md  index.json
examples/bad_specs/: b01_unknown_mark.json  b02_unknown_transform_op.json  b03_unknown_agg_fn.json  b04_float_filter_value.json  b05_unknown_channel_field.json  b06_wrong_version.json  b07_nonexistent_field.json  b08_dataset_hash_mismatch.json  b09_sum_on_string_field.json  b10_filter_int_vs_string.json  b11_axis_type_mismatch.json  b12_encoding_field_absent.json  b13_missing_y_unit.json  b14_group_by_without_aggregate.json  b15_aggregate_as_collides_group_key.json  b16_sort_fields_not_distinct.json  b17_injection_encoding_aggregate.json  b18_injection_top_level_url.json
examples/good_specs/: g01_total_revenue_by_month.json  g02_revenue_by_region.json  g03_order_count_by_month.json  g04_revenue_vs_orders.json  g05_avg_revenue_by_region.json  g06_max_temp_by_city.json  g07_temp_over_time_by_city.json  g08_na_revenue_by_month.json  g09_min_revenue_by_month.json  g10_temp_vs_precip.json
model_backend/: __init__.py  __main__.py  app.py  engine.py  models.py  schema_guidance.py  settings.py  verified_chart.py
schema/: openapi.json  vplot-0.1.schema.json
src/verifier/: __init__.py  attestation.py  canon.py  checks.py  errors.py  eval.py  formal.py  ingest.py  limits.py  render.py  replay.py  schema.py
src/verifier/assets/fonts/: LICENSE
src/verifier/service/: __init__.py  __main__.py  admission.py  app.py  archive.py  audit.py  identity.py  model_client.py  models.py  openapi.py  pipeline.py  replay.py  settings.py  store.py
tests/: conftest.py  corpus.py  formal_oracle.py  oracle.py  test_attestation.py  test_bench_harness.py  test_canon.py  test_checks.py  test_demo_e2e.py  test_demo_e2e_legs.py  test_e2e_hardening.py  test_eval.py  test_eval_properties.py  test_examples.py  test_formal.py  test_formal_differential.py  test_ingest.py  test_limits.py  test_model_backend.py  test_oracle_parity.py  test_render.py  test_replay.py  test_schema.py  test_schema_properties.py  test_service.py  test_service_admission.py  test_service_archive.py  test_service_attempt_bundle.py  test_service_attempt_capture.py  test_service_audit.py  test_service_identity.py  test_service_live.py  test_service_model_client.py  test_service_openapi.py  test_service_plot_bundle.py  test_service_propose.py  test_service_render.py  test_service_replay.py  test_service_replay_route.py  test_service_verify.py  (+7 more)
webui/: README.md  __init__.py  __main__.py  bootstrap.py  client.py  enforcement_filter.py  launch.sh  model_stub.py  settings.py
