# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
[project]
name = "verifier"
version = "0.1.0"
description = "Trusted core for the verified-plot PoC: independently recompute and verify chart specs before render."
requires-python = ">=3.13"
license = "Apache-2.0 WITH LLVM-exception"
license-files = ["LICENSE"]
authors = [{ name = "Emir Turkes", email = "eturkes@bu.edu" }]
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.13",
    "pytest>=8",
    "pytest-cov>=6",
    "hypothesis>=6.110",
    "syrupy>=4.8",
    "duckdb>=1.1",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

# --- lint / format -----------------------------------------------------------
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# Strong, explicitly pinned set (stable across ruff upgrades, unlike "ALL").
# S (bandit), T20 (no print), DTZ (tz-aware datetime) are load-bearing for a security/determinism core.
select = [
    "E", "W", "F", "I", "N", "UP", "B", "S", "T20", "DTZ",
    "C4", "SIM", "PTH", "RET", "RUF", "PL", "TRY", "EM",
    "FURB", "PERF", "A", "ARG", "PIE", "ICN", "TID", "FBT",
]
ignore = [
    "COM812", # trailing commas — owned by the formatter
    "ISC001", # implicit string concat — owned by the formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004"] # asserts and bare magic values are idiomatic in tests

[tool.ruff.lint.isort]
known-first-party = ["verifier"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

# --- types -------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]
mypy_path = "src"
warn_unreachable = true
enable_error_code = [
    "redundant-expr",
    "truthy-bool",
    "ignore-without-code",
    "possibly-undefined",
]

# --- tests / coverage --------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config --import-mode=importlib --cov --cov-report=term-missing"
testpaths = ["tests"]
xfail_strict = true

[tool.coverage.run]
branch = true
source = ["verifier"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]
