# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
[project]
name = "verifier"
version = "0.1.0"
description = "Trusted core for the verified-plot PoC: independently recompute and verify chart specs before render."
# Pinned to the 3.13.x line for reproducibility: msgspec ships per-interpreter compiled
# wheels and stdlib behavior can drift across minors, so a wider floor would admit an
# untested interpreter. Golden hash vectors (tests) are the actual canonical-form guard;
# the runtime stamps python/msgspec/unidata into the VCert for provenance.
requires-python = ">=3.13,<3.14"
license = "Apache-2.0 WITH LLVM-exception"
license-files = ["LICENSE"]
authors = [{ name = "Emir Turkes", email = "eturkes@bu.edu" }]
# msgspec (NOT Pydantic): strict, fail-closed decode — float/bool/unknown-key tokens
# are rejected at decode, so a valid spec is never partial or coerced. See memory Stack.
# vl-convert-python: the deterministic VPlot→Vega-Lite→SVG renderer (M1.6b). Ships py.typed
# (no mypy override) and is a src dep (no TID251 ban, unlike the dev-only duckdb oracle).
# litestar + uvicorn (M2): the local HTTP transport wrapping the verifier — msgspec-native
# serialization, built-in body cap, single-worker 127.0.0.1. Both ship py.typed. See memory Stack.
dependencies = [
    "msgspec>=0.21,<1",
    "vl-convert-python>=1.9,<2",
    "litestar>=2.24,<3",
    "uvicorn>=0.49,<1",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.13",
    "pytest>=8",
    "pytest-cov>=6",
    "hypothesis>=6.110",
    "jsonschema>=4.21", # test-only: assert the exported golden is Draft-2020-12 valid
    "duckdb>=1.1",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

# --- lint / format -----------------------------------------------------------
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# Explicit select (never "ALL"): new rule categories never auto-enable on upgrade.
# The exact rule set is still pinned by uv.lock, so run the gate with `uv run --locked`.
# S (bandit), T20 (no print), DTZ (tz-aware datetime) are load-bearing for a security/determinism core.
select = [
    "E", "W", "F", "I", "N", "UP", "B", "S", "T20", "DTZ",
    "C4", "SIM", "PTH", "RET", "RUF", "PL", "TRY", "EM",
    "FURB", "PERF", "A", "ARG", "PIE", "ICN", "TID", "FBT",
]
ignore = [
    "COM812", # trailing commas — owned by the formatter
    "ISC001", # implicit string concat — owned by the formatter
]

[tool.ruff.lint.per-file-ignores]
# asserts + bare magic values are idiomatic in tests; TID251 lets tests import jsonschema.
"tests/**" = ["S101", "PLR2004", "TID251"]

[tool.ruff.lint.isort]
known-first-party = ["verifier"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

# jsonschema is a dev/test-only dep (no py.typed). Ban it outside tests/ so a stray src
# import fails the gate instead of silently becoming Any under the global mypy override.
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"jsonschema".msg = "test-only (golden assertion); do not import from src/"
"duckdb".msg = "test-only (dual-engine oracle); do not import from src/"

# --- types -------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]
# tests/ on the path so mypy resolves `import oracle` (the dev-only DuckDB oracle).
mypy_path = ["src", "tests"]
warn_unreachable = true
enable_error_code = [
    "redundant-expr",
    "truthy-bool",
    "ignore-without-code",
    "possibly-undefined",
]

# jsonschema ships no py.typed; this override is GLOBAL. jsonschema is dev/test-only and
# the ruff TID251 ban keeps it out of src/, so a stray src import fails the gate (ruff)
# rather than silently type-checking as Any here.
[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

# --- tests / coverage --------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config --import-mode=importlib --cov --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["tests"]  # so `import oracle` (the dev-only DuckDB oracle) resolves
xfail_strict = true

[tool.coverage.run]
branch = true
source = ["verifier"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_also = [
    # No "raise NotImplementedError" / "..." here: in a trusted core an unimplemented
    # stub must show as uncovered and fail the 100% gate, not be quietly excused.
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
